<resources>
    <string name="app_name">Sporbul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select event time</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="my_events">My Events</string>
    <string name="settings">Settings</string>
    <string name="filter_by">Filter by</string>
    <string name="sport_type">Sport Type</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="extra_notes">Extra Notes</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_sporbul">Welcome to SporBul!</string>
    <string name="meet_amp_enjoy_sports"><![CDATA[meet & enjoy sports]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up">or Sign Up</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="event_type">Event Type</string>
    <string name="age_restrictions">Age Restrictions</string>
    <string name="notes">Notes</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="please_fill_your_data">Please fill your data</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back_to_login">Go back to Login</string>
</resources>