<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.Material3.BottomSheetDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/filter_by"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sport_type">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/typeAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            app:simpleItems="@array/sport_type" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/ageAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            app:simpleItems="@array/age_ranges" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cityAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            app:simpleItems="@array/turkey_city" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center|end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_filters" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters" />

    </LinearLayout>

</LinearLayout>